7day 6dayのコードのリファクタリング

--- a/6day/index.html
+++ b/6day/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div id="container">
-        <div class="animate-title inview">
+        <div class="animate-title">
             PONPON PAINPAIN
         </div>
-        <button class="btn" onclick="document.querySelector('.animate-title').classList.toggle('inview');">Animation</button>
+        <button class="btn">Animation</button>
     </div>
     <script src="main.js"></script>
 </body>
